[package]
name = "woman"
version = "0.1.0"
edition = "2024"

[dependencies]
atty = "0.2.14"
clap = {version= "4.5.45", features=['derive']}
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = {version = "1.0.219", features=['derive']}
surrealdb = {version="2.3.7",default-features=false, features=['allocator','kv-mem']}
tokio = {version = "1.47.1", features=['macros','rt-multi-thread', 'sync']}
winnow = "0.7.13"


[profile.release]
lto = true
strip = true
opt-level = 3
panic = 'abort'
codegen-units = 1
